--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,3 @@
 <resources>
-    <style name="Theme.ClueAndroidAssignment" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Splash" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
